--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,71 +1,503 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-<!-- breadcrumb part start-->
-    <section class="breadcrumb_part">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner">
-                        <h2>blog</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- breadcrumb part end-->
 
-    <!--================Blog Area =================-->
-    <section class="blog_area section_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mb-5 mb-lg-0">
-                    <div class="blog_left_sidebar">
-                        {% for post in posts %}
-                        <article class="blog_item">
-                            <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="{{post.image}}" alt="">
-                                <a href="#" class="blog_item_date">
-<!--                                    <h3>{{post.created[0:2]}}</h3>-->
-<!--                                    <p>{{post.created[3:]}}</p>-->
-                                </a>
-                            </div>
 
-                            <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog/{{post.id}}">
-                                    <h2>{{post.title}}</h2>
-                                </a>
-                                <p>{{post.content}}</p>
-                                <ul class="blog-info-link">
-                                    <li><a href="#"><i class="far fa-user"></i>{{post.user}}</a></li>
-                                    <li><a href="#"><i class="far fa-comments"></i> 03 Comments</a></li>
-                                </ul>
-                            </div>
-                        </article>
-                        {%endfor%}
-                        <nav class="blog-pagination justify-content-center d-flex">
-                            <ul class="pagination">
-                                <li class="page-item">
-                                    <a href="#" class="page-link" aria-label="Previous">
-                                        <i class="ti-angle-left"></i>
-                                    </a>
-                                </li>
-                                {%for page in post_pages%}
-                                <li class="page-item">
-                                    <a href="{{page.link}}" class="page-link">{{page.page}}</a>
-                                </li>
-                                {%endfor%}
-                                <li class="page-item">
-                                    <a href="#" class="page-link" aria-label="Next">
-                                        <i class="ti-angle-right"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                {% include 'sidebar.html' %}
-            </div>
-        </div>
-    </section>
+	<!-- Title Page -->
+	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url({% static 'images/heading-pages-05.jpg' %});">
+		<h2 class="l-text2 t-center">
+			Blog
+		</h2>
+	</section>
+
+	<!-- content page -->
+	<section class="bgwhite p-t-60">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-lg-9 p-b-75">
+					<div class="p-r-50 p-r-0-lg">
+						<!-- item blog -->
+						<div class="item-blog p-b-80">
+							<a href="/single-blog" class="item-blog-img pos-relative dis-block hov-img-zoom">
+								<img src="{% static 'images/blog-04.jpg' %}" alt="IMG-BLOG">
+
+								<span class="item-blog-date dis-block flex-c-m pos1 size17 bg4 s-text1">
+									28 Dec, 2018
+								</span>
+							</a>
+
+							<div class="item-blog-txt p-t-33">
+								<h4 class="p-b-11">
+									<a href="/single-blog" class="m-text24">
+										Black Friday Guide: Best Sales & Discount Codes
+									</a>
+								</h4>
+
+								<div class="s-text8 flex-w flex-m p-b-21">
+									<span>
+										By Admin
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										Cooking, Food
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										8 Comments
+									</span>
+								</div>
+
+								<p class="p-b-12">
+									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
+								</p>
+
+								<a href="/single-blog" class="s-text20">
+									Continue Reading
+									<i class="fa fa-long-arrow-right m-l-8" aria-hidden="true"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- item blog -->
+						<div class="item-blog p-b-80">
+							<a href="/single-blog" class="item-blog-img pos-relative dis-block hov-img-zoom">
+								<img src="{% static 'images/blog-05.jpg' %}" alt="IMG-BLOG">
+
+								<span class="item-blog-date dis-block flex-c-m pos1 size17 bg4 s-text1">
+									26 Dec, 2018
+								</span>
+							</a>
+
+							<div class="item-blog-txt p-t-33">
+								<h4 class="p-b-11">
+									<a href="/single-blog" class="m-text24">
+										The White Sneakers Nearly Every Fashion Girls Own
+									</a>
+								</h4>
+
+								<div class="s-text8 flex-w flex-m p-b-21">
+									<span>
+										By Admin
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										Fashion, Life style
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										8 Comments
+									</span>
+								</div>
+
+								<p class="p-b-12">
+									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
+								</p>
+
+								<a href="/single-blog" class="s-text20">
+									Continue Reading
+									<i class="fa fa-long-arrow-right m-l-8" aria-hidden="true"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- item blog -->
+						<div class="item-blog p-b-80">
+							<a href="/single-blog" class="item-blog-img pos-relative dis-block hov-img-zoom">
+								<img src="{% static 'images/blog-08.jpg' %}" alt="IMG-BLOG">
+
+								<span class="item-blog-date dis-block flex-c-m pos1 size17 bg4 s-text1">
+									22 Dec, 2018
+								</span>
+							</a>
+
+							<div class="item-blog-txt p-t-33">
+								<h4 class="p-b-11">
+									<a href="/single-blog" class="m-text24">
+										Black Friday Guide: Best Sales & Discount Codes
+									</a>
+								</h4>
+
+								<div class="s-text8 flex-w flex-m p-b-21">
+									<span>
+										By Admin
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										Cooking, Food
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										8 Comments
+									</span>
+								</div>
+
+								<p class="p-b-12">
+									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
+								</p>
+
+								<a href="/single-blog" class="s-text20">
+									Continue Reading
+									<i class="fa fa-long-arrow-right m-l-8" aria-hidden="true"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- item blog -->
+						<div class="item-blog p-b-80">
+							<a href="/single-blog" class="item-blog-img pos-relative dis-block hov-img-zoom">
+								<img src="{% static 'images/blog-02.jpg' %}" alt="IMG-BLOG">
+
+								<span class="item-blog-date dis-block flex-c-m pos1 size17 bg4 s-text1">
+									18 Dec, 2018
+								</span>
+							</a>
+
+							<div class="item-blog-txt p-t-33">
+								<h4 class="p-b-11">
+									<a href="/single-blog" class="m-text24">
+										Black Friday Guide: Best Sales & Discount Codes
+									</a>
+								</h4>
+
+								<div class="s-text8 flex-w flex-m p-b-21">
+									<span>
+										By Admin
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										Cooking, Food
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										8 Comments
+									</span>
+								</div>
+
+								<p class="p-b-12">
+									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
+								</p>
+
+								<a href="/single-blog" class="s-text20">
+									Continue Reading
+									<i class="fa fa-long-arrow-right m-l-8" aria-hidden="true"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- item blog -->
+						<div class="item-blog p-b-80">
+							<a href="/single-blog" class="item-blog-img pos-relative dis-block hov-img-zoom">
+								<img src="{% static 'images/blog-03.jpg' %}" alt="IMG-BLOG">
+
+								<span class="item-blog-date dis-block flex-c-m pos1 size17 bg4 s-text1">
+									16 Dec, 2018
+								</span>
+							</a>
+
+							<div class="item-blog-txt p-t-33">
+								<h4 class="p-b-11">
+									<a href="/single-blog" class="m-text24">
+										Black Friday Guide: Best Sales & Discount Codes
+									</a>
+								</h4>
+
+								<div class="s-text8 flex-w flex-m p-b-21">
+									<span>
+										By Admin
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										Cooking, Food
+										<span class="m-l-3 m-r-6">|</span>
+									</span>
+
+									<span>
+										8 Comments
+									</span>
+								</div>
+
+								<p class="p-b-12">
+									Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce eget dictum tortor. Donec dictum vitae sapien eu varius
+								</p>
+
+								<a href="/single-blog" class="s-text20">
+									Continue Reading
+									<i class="fa fa-long-arrow-right m-l-8" aria-hidden="true"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+
+					<!-- Pagination -->
+					<div class="pagination flex-m flex-w p-r-50">
+						<a href="#" class="item-pagination flex-c-m trans-0-4 active-pagination">1</a>
+						<a href="#" class="item-pagination flex-c-m trans-0-4">2</a>
+					</div>
+				</div>
+
+				<div class="col-md-4 col-lg-3 p-b-75">
+					<div class="rightbar">
+						<!-- Search -->
+						<div class="pos-relative bo11 of-hidden">
+							<input class="s-text7 size16 p-l-23 p-r-50" type="text" name="search-product" placeholder="Search">
+
+							<button class="flex-c-m size5 ab-r-m color1 color0-hov trans-0-4">
+								<i class="fs-13 fa fa-search" aria-hidden="true"></i>
+							</button>
+						</div>
+
+						<!-- Categories -->
+						<h4 class="m-text23 p-t-56 p-b-34">
+							Categories
+						</h4>
+
+						<ul>
+							<li class="p-t-6 p-b-8 bo6">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									Fashion
+								</a>
+							</li>
+
+							<li class="p-t-6 p-b-8 bo7">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									Beauty
+								</a>
+							</li>
+
+							<li class="p-t-6 p-b-8 bo7">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									Street Style
+								</a>
+							</li>
+
+							<li class="p-t-6 p-b-8 bo7">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									Life Style
+								</a>
+							</li>
+
+							<li class="p-t-6 p-b-8 bo7">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									DIY & Crafts
+								</a>
+							</li>
+						</ul>
+
+						<!-- Featured Products -->
+						<h4 class="m-text23 p-t-65 p-b-34">
+							Featured Products
+						</h4>
+
+						<ul class="bgwhite">
+							<li class="flex-w p-b-20">
+								<a href="product-detail.html" class="dis-block wrap-pic-w w-size22 m-r-20 trans-0-4 hov4">
+									<img src="{% static 'images/item-16.jpg' %}" alt="IMG-PRODUCT">
+								</a>
+
+								<div class="w-size23 p-t-5">
+									<a href="product-detail.html" class="s-text20">
+										White Shirt With Pleat Detail Back
+									</a>
+
+									<span class="dis-block s-text17 p-t-6">
+										$19.00
+									</span>
+								</div>
+							</li>
+
+							<li class="flex-w p-b-20">
+								<a href="product-detail.html" class="dis-block wrap-pic-w w-size22 m-r-20 trans-0-4 hov4">
+									<img src="{% static 'images/item-17.jpg' %}" alt="IMG-PRODUCT">
+								</a>
+
+								<div class="w-size23 p-t-5">
+									<a href="product-detail.html" class="s-text20">
+										Converse All Star Hi Black Canvas
+									</a>
+
+									<span class="dis-block s-text17 p-t-6">
+										$39.00
+									</span>
+								</div>
+							</li>
+
+							<li class="flex-w p-b-20">
+								<a href="product-detail.html" class="dis-block wrap-pic-w w-size22 m-r-20 trans-0-4 hov4">
+									<img src="{% static 'images/item-08.jpg' %}" alt="IMG-PRODUCT">
+								</a>
+
+								<div class="w-size23 p-t-5">
+									<a href="product-detail.html" class="s-text20">
+										Nixon Porter Leather Watch In Tan
+									</a>
+
+									<span class="dis-block s-text17 p-t-6">
+										$17.00
+									</span>
+								</div>
+							</li>
+
+							<li class="flex-w p-b-20">
+								<a href="product-detail.html" class="dis-block wrap-pic-w w-size22 m-r-20 trans-0-4 hov4">
+									<img src="{% static 'images/item-03.jpg' %}" alt="IMG-PRODUCT">
+								</a>
+
+								<div class="w-size23 p-t-5">
+									<a href="product-detail.html" class="s-text20">
+										Denim jacket blue
+									</a>
+
+									<span class="dis-block s-text17 p-t-6">
+										$39.00
+									</span>
+								</div>
+							</li>
+
+							<li class="flex-w p-b-20">
+								<a href="product-detail.html" class="dis-block wrap-pic-w w-size22 m-r-20 trans-0-4 hov4">
+									<img src="{% static 'images/item-05.jpg' %}" alt="IMG-PRODUCT">
+								</a>
+
+								<div class="w-size23 p-t-5">
+									<a href="product-detail.html" class="s-text20">
+										Nixon Porter Leather Watch In Tan
+									</a>
+
+									<span class="dis-block s-text17 p-t-6">
+										$17.00
+									</span>
+								</div>
+							</li>
+						</ul>
+
+						<!-- Archive -->
+						<h4 class="m-text23 p-t-50 p-b-16">
+							Archive
+						</h4>
+
+						<ul>
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									July 2018
+								</a>
+
+								<span class="s-text13">
+									(9)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									June 2018
+								</a>
+
+								<span class="s-text13">
+									(39)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									May 2018
+								</a>
+
+								<span class="s-text13">
+									(29)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									April  2018
+								</a>
+
+								<span class="s-text13">
+									(35)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									March 2018
+								</a>
+
+								<span class="s-text13">
+									(22)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									February 2018
+								</a>
+
+								<span class="s-text13">
+									(32)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									January 2018
+								</a>
+
+								<span class="s-text13">
+									(21)
+								</span>
+							</li>
+
+							<li class="flex-sb-m">
+								<a href="#" class="s-text13 p-t-5 p-b-5">
+									December 2017
+								</a>
+
+								<span class="s-text13">
+									(26)
+								</span>
+							</li>
+						</ul>
+
+						<!-- Tags -->
+						<h4 class="m-text23 p-t-50 p-b-25">
+							Tags
+						</h4>
+
+						<div class="wrap-tags flex-w">
+							<a href="#" class="tag-item">
+								Fashion
+							</a>
+
+							<a href="#" class="tag-item">
+								Lifestyle
+							</a>
+
+							<a href="#" class="tag-item">
+								Denim
+							</a>
+
+							<a href="#" class="tag-item">
+								Streetstyle
+							</a>
+
+							<a href="#" class="tag-item">
+								Crafts
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 {% endblock %}
