--- a/templates/product.html
+++ b/templates/product.html
@@ -56,7 +56,7 @@
 					<!-- Product -->
 					<div class="row">
 						{% for product in products %}
-						<div class="col-sm-12 col-md-6 col-lg-4 p-b-50">
+						<div id="{{ product.id }}" class="product-id col-sm-12 col-md-6 col-lg-4 p-b-50">
 							<!-- Block2 -->
 							<div class="block2">
 								<div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew">
