--- a/templates/base.html
+++ b/templates/base.html
@@ -123,62 +123,33 @@
 
 					<div class="header-wrapicon2">
 						<img src="{% static 'images/icons/icon-header-02.png' %}" class="header-icon1 js-show-header-dropdown" alt="ICON">
-						<span class="header-icons-noti">0</span>
+						<span class="header-icons-noti">{{ carts|length}}</span>
 
 						<!-- Header cart noti -->
 						<div class="header-cart header-dropdown">
 							<ul class="header-cart-wrapitem">
-								<li class="header-cart-item">
+                                {% for cart in carts %}
+                                <li class="header-cart-item">
 									<div class="header-cart-item-img">
-										<img src="{% static 'images/item-cart-01.jpg' %}" alt="IMG">
+										<img src="../{{cart.product.image}}" alt="IMG">
 									</div>
 
 									<div class="header-cart-item-txt">
 										<a href="#" class="header-cart-item-name">
-											White Shirt With Pleat Detail Back
+                                            {{ cart.product.name}}
 										</a>
 
 										<span class="header-cart-item-info">
-											1 x $19.00
+											{{ cart.count }} x ${{ cart.product.price }}
 										</span>
 									</div>
 								</li>
+                                {% endfor %}
 
-								<li class="header-cart-item">
-									<div class="header-cart-item-img">
-										<img src="{% static 'images/item-cart-02.jpg' %}" alt="IMG">
-									</div>
-
-									<div class="header-cart-item-txt">
-										<a href="#" class="header-cart-item-name">
-											Converse All Star Hi Black Canvas
-										</a>
-
-										<span class="header-cart-item-info">
-											1 x $39.00
-										</span>
-									</div>
-								</li>
-
-								<li class="header-cart-item">
-									<div class="header-cart-item-img">
-										<img src="{% static 'images/item-cart-03.jpg' %}" alt="IMG">
-									</div>
-
-									<div class="header-cart-item-txt">
-										<a href="#" class="header-cart-item-name">
-											Nixon Porter Leather Watch In Tan
-										</a>
-
-										<span class="header-cart-item-info">
-											1 x $17.00
-										</span>
-									</div>
-								</li>
 							</ul>
 
 							<div class="header-cart-total">
-								Total: $75.00
+								Total: ${{ total }}
 							</div>
 
 							<div class="header-cart-buttons">
@@ -598,6 +569,14 @@
                 console.log(product_id)
 			});
 		});
+
+        $('.header-cart-item-img').on('click', function (e){
+        e.preventDefault();
+        let data = new FormData();
+        console.log('huii')
+        // data.append('id', product_id)
+        // data.append('csrfmiddlewaretoken', document.getElementById('csrftoken').value);
+        })
 
 		$('.block2-btn-addwishlist').each(function(){
 			var nameProduct = $(this).parent().parent().parent().find('.block2-name').html();
