--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="/product/?cat=7" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Dresses
 							</a>
 						</div>
@@ -91,7 +91,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="/product/?cat=10" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Sunglasses
 							</a>
 						</div>
@@ -105,7 +105,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="/product/?cat=8" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Watches
 							</a>
 						</div>
@@ -117,7 +117,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="/product/?cat=11" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Footerwear
 							</a>
 						</div>
@@ -131,7 +131,7 @@
 
 						<div class="block1-wrapbtn w-size2">
 							<!-- Button -->
-							<a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+							<a href="/product/?cat=9" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
 								Bags
 							</a>
 						</div>
