--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 							</li>
 
 							<li>
-								<a href="/cart">Features</a>
+								<a href="/cart">Cart</a>
 							</li>
 
 							<li>
@@ -130,7 +130,7 @@
 							<ul class="header-cart-wrapitem">
                                 {% for cart in carts %}
                                 <li class="header-cart-item">
-									<div class="header-cart-item-img">
+									<div id="{{cart.product.id}}" class="header-cart-item-img">
 										<img src="../{{cart.product.image}}" alt="IMG">
 									</div>
 
@@ -565,23 +565,30 @@
                 data.append('id', product_id)
                 data.append('csrfmiddlewaretoken', document.getElementById('csrftoken').value);
                 var x = fetch('/product/create/', {method:'POST', body:data, credentials: 'same-origin'}).then((response)=>response.json()).then((data)=>{
-					console.log(data)
-					$('.header-icons-noti').html(Number($('.header-icons-noti').html()) + 1)
-					$('.header-cart-wrapitem').append(`<li class="header-cart-item">
-									<div class="header-cart-item-img">
-										<img src="../${ data.product.image }" alt="IMG">
+					var new_cart = ''		
+					for (cart of data.cart) {
+						console.log(cart.price)
+						new_cart += `<li class="header-cart-item">
+									<div id="${cart.product.id}" class="header-cart-item-img">
+										<img src="../${ cart.product.image }" alt="IMG">
 									</div>
 
 									<div class="header-cart-item-txt">
 										<a href="#" class="header-cart-item-name">
-                                            ${ data.product.name }
+                                            ${ cart.product.name }
 										</a>
 
 										<span class="header-cart-item-info">
-											${ data.count } x ${ data.product.price }
+											${ cart.count } x $${ cart.product.price }
 										</span>
 									</div>
-								</li>`)
+								</li>`
+					}
+							$('.header-icons-noti').html(data.cart.length)
+							$('.header-cart-wrapitem').html(new_cart)
+							
+					
+					
 				})
 				swal(nameProduct, "is added to cart !", "success");
                 console.log(product_id)
@@ -591,7 +598,7 @@
         $('.header-cart-item-img').on('click', function (e){
         e.preventDefault();
         let data = new FormData();
-        console.log('huii')
+    
         // data.append('id', product_id)
         // data.append('csrfmiddlewaretoken', document.getElementById('csrftoken').value);
         })
